# Astro-Log-Sentiment

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: expeditions.json
docs/: DESIGN_DOC.md
scripts/: analyze.py  scrape.py
src/analysis/: emotion.py  linguistic.py  runner.py  sentiment.py
src/dashboard/: app.py
src/dashboard/pages/: 1_Mission_Timeline.py  2_Emotion_Breakdown.py  3_Expedition_Compare.py  4_Oral_Histories.py
src/data/: db.py  models.py
src/scraping/: iss_blog_scraper.py  oral_history_scraper.py
tests/: conftest.py  test_db.py  test_emotion.py  test_linguistic.py  test_models.py  test_runner.py  test_scrapers.py  test_sentiment.py
