[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "astro-sentiment"
version = "0.1.0"
description = "NLP sentiment analysis of NASA astronaut communications"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "PyMuPDF>=1.24.0",
    "transformers>=4.36.0",
    "torch>=2.1.0",
    "sentencepiece>=0.2.0",
    "protobuf>=4.25.0",
    "streamlit>=1.30.0",
    "plotly>=5.18.0",
    "pandas>=2.1.0",
    "pydantic>=2.5.0",
    "wordcloud>=1.9.0",
    "textstat>=0.7.3",
    "tqdm>=4.66.0",
    "tenacity>=8.2.0",
    "scipy>=1.11.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4.0", "pytest-cov>=4.1.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
